logs/cborencoder.h

typedef unsigned int size_t;
typedef __uint8_t uint8_t ;
typedef __uint16_t uint16_t ;
typedef __uint32_t uint32_t ;
typedef __int64_t int64_t ;
typedef __uint64_t uint64_t ;
typedef __uintptr_t uintptr_t;
typedef enum CborType {
    CborIntegerType = 0x00,
    CborByteStringType = 0x40,
    CborTextStringType = 0x60,
    CborArrayType = 0x80,
    CborMapType = 0xa0,
    CborTagType = 0xc0,
    CborSimpleType = 0xe0,
    CborBooleanType = 0xf5,
    CborNullType = 0xf6,
    CborUndefinedType = 0xf7,
    CborHalfFloatType = 0xf9,
    CborFloatType = 0xfa,
    CborDoubleType = 0xfb,

    CborInvalidType = 0xff
} CborType;
typedef uint64_t CborTag;
typedef enum CborKnownTags {
    CborDateTimeStringTag = 0,
    CborUnixTime_tTag = 1,
    CborPositiveBignumTag = 2,
    CborNegativeBignumTag = 3,
    CborDecimalTag = 4,
    CborBigfloatTag = 5,
    CborExpectedBase64urlTag = 21,
    CborExpectedBase64Tag = 22,
    CborExpectedBase16Tag = 23,
    CborUriTag = 32,
    CborBase64urlTag = 33,
    CborBase64Tag = 34,
    CborRegularExpressionTag = 35,
    CborMimeMessageTag = 36,
    CborSignatureTag = 55799
} CborKnownTags;
typedef enum CborError {
    CborNoError = 0,


    CborUnknownError,
    CborErrorUnknownLength,
    CborErrorAdvancePastEOF,
    CborErrorIO,


    CborErrorGarbageAtEnd = 256,
    CborErrorUnexpectedEOF,
    CborErrorUnexpectedBreak,
    CborErrorUnknownType,
    CborErrorIllegalType,
    CborErrorIllegalNumber,
    CborErrorIllegalSimpleType,


    CborErrorUnknownSimpleType = 512,
    CborErrorUnknownTag,
    CborErrorInappropriateTagForType,
    CborErrorDuplicateObjectKeys,
    CborErrorInvalidUtf8TextString,


    CborErrorTooManyItems = 768,
    CborErrorTooFewItems,


    CborErrorDataTooLarge = 1024,
    CborErrorNestingTooDeep,
    CborErrorUnsupportedType,


    CborErrorJsonObjectKeyIsAggregate,
    CborErrorJsonObjectKeyNotString,
    CborErrorJsonNotImplemented,

    CborErrorOutOfMemory = ~0U / 2 + 1,
    CborErrorInternalError = ~0U
} CborError;
 const char *cbor_error_string(CborError error);
struct cbor_encoder_writer;
typedef int (cbor_encoder_write)(struct cbor_encoder_writer *, const char *data, int len);
typedef struct cbor_encoder_writer {
    cbor_encoder_write *write;
    int bytes_written;
} cbor_encoder_writer;
struct cbor_iovec {
    void *iov_base;
    size_t iov_len;
};
struct CborEncoder {
    cbor_encoder_writer *writer;
    void *writer_arg;
    size_t added;
    int flags;
};
typedef struct CborEncoder CborEncoder;
 void cbor_encoder_init(CborEncoder *encoder, cbor_encoder_writer *pwriter, int flags);
 CborError cbor_encode_uint(CborEncoder *encoder, uint64_t value);
 CborError cbor_encode_int(CborEncoder *encoder, int64_t value);
 CborError cbor_encode_negative_int(CborEncoder *encoder, uint64_t absolute_value);
 CborError cbor_encode_simple_value(CborEncoder *encoder, uint8_t value);
 CborError cbor_encode_tag(CborEncoder *encoder, CborTag tag);
 CborError cbor_encode_text_string(CborEncoder *encoder, const char *string, size_t length);
 CborError cbor_encode_byte_string(CborEncoder *encoder, const uint8_t *string, size_t length);
 CborError cbor_encode_byte_iovec(CborEncoder *encoder,
                                          const struct cbor_iovec iov[],
                                          int iov_len);
 CborError cbor_encode_floating_point(CborEncoder *encoder, CborType fpType, const void *value);
 CborError cbor_encoder_create_array(CborEncoder *encoder, CborEncoder *arrayEncoder, size_t length);
 CborError cbor_encoder_create_map(CborEncoder *encoder, CborEncoder *mapEncoder, size_t length);
 CborError cbor_encoder_create_indef_byte_string(CborEncoder *encoder, CborEncoder *stringEncoder);
 CborError cbor_encoder_close_container(CborEncoder *encoder, const CborEncoder *containerEncoder);
 CborError cbor_encoder_close_container_checked(CborEncoder *encoder, const CborEncoder *containerEncoder);
enum CborParserIteratorFlags
{
    CborIteratorFlag_IntegerValueTooLarge = 0x01,
    CborIteratorFlag_NegativeInteger = 0x02,
    CborIteratorFlag_UnknownLength = 0x04,
    CborIteratorFlag_ContainerIsMap = 0x20
};
struct cbor_decoder_reader;
typedef uint8_t (cbor_reader_get8)(struct cbor_decoder_reader *d, int offset);
typedef uint16_t (cbor_reader_get16)(struct cbor_decoder_reader *d, int offset);
typedef uint32_t (cbor_reader_get32)(struct cbor_decoder_reader *d, int offset);
typedef uint64_t (cbor_reader_get64)(struct cbor_decoder_reader *d, int offset);
typedef uintptr_t (cbor_memcmp)(struct cbor_decoder_reader *d, char *buf, int offset, size_t len);
typedef uintptr_t (cbor_memcpy)(struct cbor_decoder_reader *d, char *buf, int offset, size_t len);
struct cbor_decoder_reader {
    cbor_reader_get8 *get8;
    cbor_reader_get16 *get16;
    cbor_reader_get32 *get32;
    cbor_reader_get64 *get64;
    cbor_memcmp *cmp;
    cbor_memcpy *cpy;
    size_t message_size;
};
typedef enum CborMajorTypes {
    UnsignedIntegerType = 0U,
    NegativeIntegerType = 1U,
    ByteStringType = 2U,
    TextStringType = 3U,
    ArrayType = 4U,
    MapType = 5U,
    TagType = 6U,
    SimpleTypesType = 7U
} CborMajorTypes;
typedef enum CborSimpleTypes {
    FalseValue = 20,
    TrueValue = 21,
    NullValue = 22,
    UndefinedValue = 23,
    SimpleTypeInNextByte = 24,
    HalfPrecisionFloat = 25,
    SinglePrecisionFloat = 26,
    DoublePrecisionFloat = 27,
    Break = 31
} CborSimpleTypes;
enum {
    SmallValueBitLength = 5U,
    SmallValueMask = (1U << SmallValueBitLength) - 1,
    Value8Bit = 24U,
    Value16Bit = 25U,
    Value32Bit = 26U,
    Value64Bit = 27U,
    IndefiniteLength = 31U,

    MajorTypeShift = SmallValueBitLength,
    MajorTypeMask = ~0U << MajorTypeShift,

    BreakByte = (unsigned)Break | (SimpleTypesType << MajorTypeShift)
};
void cbor_encoder_init(CborEncoder *encoder, cbor_encoder_writer *writer, int flags)
{
    encoder->writer = writer;
    encoder->added = 0;
    encoder->flags = flags;
}
CborError cbor_encode_uint(CborEncoder *encoder, uint64_t value)
{
    return encode_number(encoder, value, UnsignedIntegerType << MajorTypeShift);
}
CborError cbor_encode_negative_int(CborEncoder *encoder, uint64_t absolute_value)
{
    return encode_number(encoder, absolute_value, NegativeIntegerType << MajorTypeShift);
}
CborError cbor_encode_int(CborEncoder *encoder, int64_t value)
{

    uint64_t ui = value >> 63;
    uint8_t majorType = ui & 0x20;
    ui ^= value;
    return encode_number(encoder, ui, majorType);
}
CborError cbor_encode_simple_value(CborEncoder *encoder, uint8_t value)
{


    if (value >= HalfPrecisionFloat && value <= Break)
        return CborErrorIllegalSimpleType;

    return encode_number(encoder, value, SimpleTypesType << MajorTypeShift);
}
CborError cbor_encode_floating_point(CborEncoder *encoder, CborType fpType, const void *value)
{
    uint8_t buf[1 + sizeof(uint64_t)];
    ((fpType == CborHalfFloatType || fpType == CborFloatType || fpType == CborDoubleType) ? (void)0 : __assert_func(
# 357 "repos/apache-mynewt-core/encoding/tinycbor/src/cborencoder.c" 3 4
   ((void *)0)
# 357 "repos/apache-mynewt-core/encoding/tinycbor/src/cborencoder.c"
   , 0, 
# 357 "repos/apache-mynewt-core/encoding/tinycbor/src/cborencoder.c" 3 4
   ((void *)0)
# 357 "repos/apache-mynewt-core/encoding/tinycbor/src/cborencoder.c"
   , 
# 357 "repos/apache-mynewt-core/encoding/tinycbor/src/cborencoder.c" 3 4
   ((void *)0)
# 357 "repos/apache-mynewt-core/encoding/tinycbor/src/cborencoder.c"
   ));
    buf[0] = fpType;

    unsigned size = 2U << (fpType - CborHalfFloatType);
    if (size == 8)
        put64(buf + 1, *(const uint64_t*)value);
    else if (size == 4)
        put32(buf + 1, *(const uint32_t*)value);
    else
        put16(buf + 1, *(const uint16_t*)value);
    ++encoder->added;
    return append_to_buffer(encoder, buf, size + 1);
}
CborError cbor_encode_tag(CborEncoder *encoder, CborTag tag)
{

    return encode_number_no_update(encoder, tag, TagType << MajorTypeShift);
}
CborError cbor_encode_byte_string(CborEncoder *encoder, const uint8_t *string, size_t length)
{
    return encode_string(encoder, length, ByteStringType << MajorTypeShift, string);
}
CborError cbor_encode_byte_iovec(CborEncoder *encoder,
                                 const struct cbor_iovec iov[], int iov_len)
{
    CborError err;
    size_t length;
    int i;

    length = 0;
    for (i = 0; i < iov_len; i++) {
        length += iov[i].iov_len;
    }
    err = encode_number(encoder, length, ByteStringType << MajorTypeShift);
    if (err && !isOomError(err)) {
        return err;
    }
    for (i = 0; i < iov_len; i++) {
        err = append_to_buffer(encoder, iov[i].iov_base, iov[i].iov_len);
        if (err && !isOomError(err)) {
            return err;
        }
    }
    return 0;
}
CborError cbor_encode_text_string(CborEncoder *encoder, const char *string, size_t length)
{
    return encode_string(encoder, length, TextStringType << MajorTypeShift, string);
}
CborError cbor_encoder_create_array(CborEncoder *encoder, CborEncoder *arrayEncoder, size_t length)
{
    return create_container(encoder, arrayEncoder, length, ArrayType << MajorTypeShift);
}
CborError cbor_encoder_create_map(CborEncoder *encoder, CborEncoder *mapEncoder, size_t length)
{
    if (length != CborIndefiniteLength && length > 
# 520 "repos/apache-mynewt-core/encoding/tinycbor/src/cborencoder.c" 3 4
                                                  (0xffffffffU) 
# 520 "repos/apache-mynewt-core/encoding/tinycbor/src/cborencoder.c"
                                                           / 2)
        return CborErrorDataTooLarge;
    return create_container(encoder, mapEncoder, length, MapType << MajorTypeShift);
}
CborError cbor_encoder_create_indef_byte_string(CborEncoder *encoder, CborEncoder *stringEncoder)
{
    return create_container(encoder, stringEncoder, CborIndefiniteLength, ByteStringType << MajorTypeShift);
}
CborError cbor_encoder_close_container(CborEncoder *encoder, const CborEncoder *containerEncoder)
{
    encoder->writer = containerEncoder->writer;

    if (containerEncoder->flags & CborIteratorFlag_UnknownLength)
        return append_byte_to_buffer(encoder, BreakByte);
    return CborNoError;
}