logs/bindings.rs

pub const CborType_CborIntegerType: CborType = 0;
pub const CborType_CborByteStringType: CborType = 64;
pub const CborType_CborTextStringType: CborType = 96;
pub const CborType_CborArrayType: CborType = 128;
pub const CborType_CborMapType: CborType = 160;
pub const CborType_CborTagType: CborType = 192;
pub const CborType_CborSimpleType: CborType = 224;
pub const CborType_CborBooleanType: CborType = 245;
pub const CborType_CborNullType: CborType = 246;
pub const CborType_CborUndefinedType: CborType = 247;
pub const CborType_CborHalfFloatType: CborType = 249;
pub const CborType_CborFloatType: CborType = 250;
pub const CborType_CborDoubleType: CborType = 251;
pub const CborType_CborInvalidType: CborType = 255;
pub type CborType = u32;
pub type CborTag = u64;
pub const CborKnownTags_CborDateTimeStringTag: CborKnownTags = 0;
pub const CborKnownTags_CborUnixTime_tTag: CborKnownTags = 1;
pub const CborKnownTags_CborPositiveBignumTag: CborKnownTags = 2;
pub const CborKnownTags_CborNegativeBignumTag: CborKnownTags = 3;
pub const CborKnownTags_CborDecimalTag: CborKnownTags = 4;
pub const CborKnownTags_CborBigfloatTag: CborKnownTags = 5;
pub const CborKnownTags_CborExpectedBase64urlTag: CborKnownTags = 21;
pub const CborKnownTags_CborExpectedBase64Tag: CborKnownTags = 22;
pub const CborKnownTags_CborExpectedBase16Tag: CborKnownTags = 23;
pub const CborKnownTags_CborUriTag: CborKnownTags = 32;
pub const CborKnownTags_CborBase64urlTag: CborKnownTags = 33;
pub const CborKnownTags_CborBase64Tag: CborKnownTags = 34;
pub const CborKnownTags_CborRegularExpressionTag: CborKnownTags = 35;
pub const CborKnownTags_CborMimeMessageTag: CborKnownTags = 36;
pub const CborKnownTags_CborSignatureTag: CborKnownTags = 55799;
pub type CborKnownTags = u32;
pub const CborError_CborNoError: CborError = 0;
pub const CborError_CborUnknownError: CborError = 1;
pub const CborError_CborErrorUnknownLength: CborError = 2;
pub const CborError_CborErrorAdvancePastEOF: CborError = 3;
pub const CborError_CborErrorIO: CborError = 4;
pub const CborError_CborErrorGarbageAtEnd: CborError = 256;
pub const CborError_CborErrorUnexpectedEOF: CborError = 257;
pub const CborError_CborErrorUnexpectedBreak: CborError = 258;
pub const CborError_CborErrorUnknownType: CborError = 259;
pub const CborError_CborErrorIllegalType: CborError = 260;
pub const CborError_CborErrorIllegalNumber: CborError = 261;
pub const CborError_CborErrorIllegalSimpleType: CborError = 262;
pub const CborError_CborErrorUnknownSimpleType: CborError = 512;
pub const CborError_CborErrorUnknownTag: CborError = 513;
pub const CborError_CborErrorInappropriateTagForType: CborError = 514;
pub const CborError_CborErrorDuplicateObjectKeys: CborError = 515;
pub const CborError_CborErrorInvalidUtf8TextString: CborError = 516;
pub const CborError_CborErrorTooManyItems: CborError = 768;
pub const CborError_CborErrorTooFewItems: CborError = 769;
pub const CborError_CborErrorDataTooLarge: CborError = 1024;
pub const CborError_CborErrorNestingTooDeep: CborError = 1025;
pub const CborError_CborErrorUnsupportedType: CborError = 1026;
pub const CborError_CborErrorJsonObjectKeyIsAggregate: CborError = 1027;
pub const CborError_CborErrorJsonObjectKeyNotString: CborError = 1028;
pub const CborError_CborErrorJsonNotImplemented: CborError = 1029;
pub const CborError_CborErrorOutOfMemory: CborError = 2147483648;
pub const CborError_CborErrorInternalError: CborError = 4294967295;
pub type CborError = u32;
extern "C" {
    pub fn cbor_error_string(error: CborError) -> *const ::std::os::raw::c_char;
}
pub type cbor_encoder_write = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: *mut cbor_encoder_writer,
        data: *const ::std::os::raw::c_char,
        len: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbor_encoder_writer {
    pub write: cbor_encoder_write,
    pub bytes_written: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_cbor_encoder_writer() {
    assert_eq!(
        ::core::mem::size_of::<cbor_encoder_writer>(),
        16usize,
        concat!("Size of: ", stringify!(cbor_encoder_writer))
    );
    assert_eq!(
        ::core::mem::align_of::<cbor_encoder_writer>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_encoder_writer))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<cbor_encoder_writer>())).write as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_encoder_writer),
            "::",
            stringify!(write)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<cbor_encoder_writer>())).bytes_written as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_encoder_writer),
            "::",
            stringify!(bytes_written)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbor_iovec {
    pub iov_base: *mut ::std::os::raw::c_void,
    pub iov_len: usize,
}
#[test]
fn bindgen_test_layout_cbor_iovec() {
    assert_eq!(
        ::core::mem::size_of::<cbor_iovec>(),
        16usize,
        concat!("Size of: ", stringify!(cbor_iovec))
    );
    assert_eq!(
        ::core::mem::align_of::<cbor_iovec>(),
        8usize,
        concat!("Alignment of ", stringify!(cbor_iovec))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<cbor_iovec>())).iov_base as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_iovec),
            "::",
            stringify!(iov_base)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<cbor_iovec>())).iov_len as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cbor_iovec),
            "::",
            stringify!(iov_len)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CborEncoder {
    pub writer: *mut cbor_encoder_writer,
    pub writer_arg: *mut ::std::os::raw::c_void,
    pub added: usize,
    pub flags: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_CborEncoder() {
    assert_eq!(
        ::core::mem::size_of::<CborEncoder>(),
        24usize,
        concat!("Size of: ", stringify!(CborEncoder))
    );
    assert_eq!(
        ::core::mem::align_of::<CborEncoder>(),
        8usize,
        concat!("Alignment of ", stringify!(CborEncoder))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborEncoder>())).writer as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CborEncoder),
            "::",
            stringify!(writer)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborEncoder>())).writer_arg as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CborEncoder),
            "::",
            stringify!(writer_arg)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborEncoder>())).added as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(CborEncoder),
            "::",
            stringify!(added)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<CborEncoder>())).flags as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(CborEncoder),
            "::",
            stringify!(flags)
        )
    );
}
pub const CborIndefiniteLength: usize = 4294967295;
extern "C" {
    pub fn cbor_encoder_init(
        encoder: *mut CborEncoder,
        pwriter: *mut cbor_encoder_writer,
        flags: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn cbor_encode_uint(encoder: *mut CborEncoder, value: u64) -> CborError;
}
extern "C" {
    pub fn cbor_encode_int(encoder: *mut CborEncoder, value: i64) -> CborError;
}
extern "C" {
    pub fn cbor_encode_negative_int(encoder: *mut CborEncoder, absolute_value: u64) -> CborError;
}
extern "C" {
    pub fn cbor_encode_simple_value(encoder: *mut CborEncoder, value: u8) -> CborError;
}
extern "C" {
    pub fn cbor_encode_tag(encoder: *mut CborEncoder, tag: CborTag) -> CborError;
}
extern "C" {
    pub fn cbor_encode_text_string(
        encoder: *mut CborEncoder,
        string: *const ::std::os::raw::c_char,
        length: usize,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_encode_byte_string(
        encoder: *mut CborEncoder,
        string: *const u8,
        length: usize,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_encode_byte_iovec(
        encoder: *mut CborEncoder,
        iov: *const cbor_iovec,
        iov_len: ::std::os::raw::c_int,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_encode_floating_point(
        encoder: *mut CborEncoder,
        fpType: CborType,
        value: *const ::std::os::raw::c_void,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_encoder_create_array(
        encoder: *mut CborEncoder,
        arrayEncoder: *mut CborEncoder,
        length: usize,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_encoder_create_map(
        encoder: *mut CborEncoder,
        mapEncoder: *mut CborEncoder,
        length: usize,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_encoder_create_indef_byte_string(
        encoder: *mut CborEncoder,
        stringEncoder: *mut CborEncoder,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_encoder_close_container(
        encoder: *mut CborEncoder,
        containerEncoder: *const CborEncoder,
    ) -> CborError;
}
extern "C" {
    pub fn cbor_encoder_close_container_checked(
        encoder: *mut CborEncoder,
        containerEncoder: *const CborEncoder,
    ) -> CborError;
}
pub const CborParserIteratorFlags_CborIteratorFlag_IntegerValueTooLarge: CborParserIteratorFlags =
    1;
pub const CborParserIteratorFlags_CborIteratorFlag_NegativeInteger: CborParserIteratorFlags = 2;
pub const CborParserIteratorFlags_CborIteratorFlag_UnknownLength: CborParserIteratorFlags = 4;
pub const CborParserIteratorFlags_CborIteratorFlag_ContainerIsMap: CborParserIteratorFlags = 32;
pub type CborParserIteratorFlags = u32;
pub type cbor_reader_get8 = ::core::option::Option<
    unsafe extern "C" fn(d: *mut cbor_decoder_reader, offset: ::std::os::raw::c_int) -> u8,
>;
pub type cbor_reader_get16 = ::core::option::Option<
    unsafe extern "C" fn(d: *mut cbor_decoder_reader, offset: ::std::os::raw::c_int) -> u16,
>;
pub type cbor_reader_get32 = ::core::option::Option<
    unsafe extern "C" fn(d: *mut cbor_decoder_reader, offset: ::std::os::raw::c_int) -> u32,
>;
pub type cbor_reader_get64 = ::core::option::Option<
    unsafe extern "C" fn(d: *mut cbor_decoder_reader, offset: ::std::os::raw::c_int) -> u64,
>;
pub type cbor_memcmp = ::core::option::Option<
    unsafe extern "C" fn(
        d: *mut cbor_decoder_reader,
        buf: *mut ::std::os::raw::c_char,
        offset: ::std::os::raw::c_int,
        len: usize,
    ) -> usize,
>;
pub type cbor_memcpy = ::core::option::Option<
    unsafe extern "C" fn(
        d: *mut cbor_decoder_reader,
        buf: *mut ::std::os::raw::c_char,
        offset: ::std::os::raw::c_int,
        len: usize,
    ) -> usize,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cbor_decoder_reader {
    pub get8: cbor_reader_get8,
    pub get16: cbor_reader_get16,
    pub get32: cbor_reader_get32,
    pub get64: cbor_reader_get64,
    pub cmp: cbor_memcmp,
    pub cpy: cbor_memcpy,
    pub message_size: usize,
}
